countries list completed

--- a/WorldCountriesApp/Sources/Components/Countries Table View/Cell/CountryTableViewCell.xib
+++ b/WorldCountriesApp/Sources/Components/Countries Table View/Cell/CountryTableViewCell.xib
@@ -16,7 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CountryTableViewCellImpl" selectionStyle="none" indentationWidth="10" reuseIdentifier="NewsTableViewCell" rowHeight="70" id="BVr-sf-Hpt" customClass="CountryTableViewCellImpl" customModule="WorldCountriesApp" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CountryTableViewCellImpl" selectionStyle="none" indentationWidth="10" reuseIdentifier="CountryTableViewCell" rowHeight="70" id="BVr-sf-Hpt" userLabel="CountryTableViewCell" customClass="CountryTableViewCellImpl" customModule="WorldCountriesApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="118"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BVr-sf-Hpt" id="YGt-RZ-3MT">
