--- a/WorldCountriesApp/Sources/Scenes/Countries Scene/Base.lproj/CountriesScene.storyboard
+++ b/WorldCountriesApp/Sources/Scenes/Countries Scene/Base.lproj/CountriesScene.storyboard
@@ -59,5 +59,36 @@
             </objects>
             <point key="canvasLocation" x="94" y="134"/>
         </scene>
+        <!--Countries-->
+        <scene sceneID="Ftf-k8-hx1">
+            <objects>
+                <viewController storyboardIdentifier="BordersListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="AS6-hC-bZ8" customClass="BordersListViewController" customModule="WorldCountriesApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LnZ-aV-YAh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2W2-KM-1pc" customClass="CountriesTableViewImpl" customModule="WorldCountriesApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2W2-KM-1pc" firstAttribute="leading" secondItem="g8t-Np-bk0" secondAttribute="leading" id="5Or-Rv-giN"/>
+                            <constraint firstItem="g8t-Np-bk0" firstAttribute="trailing" secondItem="2W2-KM-1pc" secondAttribute="trailing" id="MbW-Cs-yzT"/>
+                            <constraint firstItem="g8t-Np-bk0" firstAttribute="bottom" secondItem="2W2-KM-1pc" secondAttribute="bottom" id="SVu-el-b7f"/>
+                            <constraint firstItem="2W2-KM-1pc" firstAttribute="top" secondItem="g8t-Np-bk0" secondAttribute="top" id="XnH-bj-QpA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="g8t-Np-bk0"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Countries" id="P1H-gr-F5I"/>
+                    <connections>
+                        <outlet property="countriesTableView" destination="2W2-KM-1pc" id="g6K-5l-3OR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eTx-Zr-u5k" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1812" y="134"/>
+        </scene>
     </scenes>
 </document>
